MIN Basic information for bootcamp

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ root: .
 venue: Euphoric State University
 address: 123 College Street, Euphoria
 country: United-States
-humandate: Feb 17-18, 2020
+humandate: Jun 16-17, 2014
 humantime: 9:00 am - 4:30 pm
-startdate: 2020-06-17
-enddate: 2020-06-18
+startdate: 2014-06-16
+enddate: 2014-06-17
 latlng: 41.7901128,-87.6007318
 registration: restricted
-instructor: ["Grace Hopper", "Alan Turing"]
+instructor: ["Luis Pedro Coelho", "Marios Isaakidis"]
 contact: admin@software-carpentry.org
 ---
 <!--
