--- a/index.html
+++ b/index.html
@@ -89,20 +89,17 @@ contact: admin@software-carpentry.org
 <h2>Schedule</h2>
 
 <table class="table table-striped">
-  <tr> <td>Monday</td>  <td>09:00</td>  <td>Introduction to task automation with the Unix shell</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
-  <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Building programs with Python</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
-  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
-  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Version control with Git</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
-  <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
-  <tr> <td></td>        <td>15:00</td>  <td>Putting it all together</td> </tr>
-  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
-</table>
+  <tr> <td>Monday</td>    <td>09:00</td>  <td>Introduction to task automation with the Unix shell</td> </tr>
+  <tr> <td></td>          <td>11:00</td>  <td>Version control with Git &amp; Github (I)</td> </tr>
+  <tr> <td></td>          <td>12:30</td>  <td>Lunch break</td> </tr>
+  <tr> <td></td>          <td>13:30</td>  <td>Building programs with Python (I)</td> </tr>
+  <tr> <td></td>          <td>15:00</td>  <td>Building programs with Python (II)</td> </tr>
+  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Version control with Git &amp; Github (II)</td> </tr>
+  <tr> <td></td>          <td>11:00</td>  <td>Task automation with Make</td> </tr>
+  <tr> <td></td>          <td>12:30</td>  <td>Lunch break</td> </tr>
+  <tr> <td></td>          <td>13:30</td>  <td>Introduction to unit testing</td> </tr>
+  <tr> <td></td>          <td>15:00</td>  <td>Wrap-up &amp; open discussion</td> </tr>
+</table>                  
 
 <hr/>
 
