ENH Update location

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: bootcamp
 root: .
-venue: King Hussein Business Park
+venue: Ibis Hotel (Open One Meeting Room)
 address: Amman
 country: Jordan
 humandate: Jun 16-17, 2014
